--- a/Passenger counter app/index.html
+++ b/Passenger counter app/index.html
@@ -5,6 +5,7 @@
     <body>
         <h1>People entered:</h1>
         <h2 id="count">0</h2>
+        <button id="increment-button" onclick="increment()">INCREMENT</button>
         <script src="index.js"></script>
     </body>
 </html>
