--- a/Passenger counter app/index.html
+++ b/Passenger counter app/index.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <h1>People entered:</h1>
+        <h1>test</h1>
         <h2 id="count">0</h2>
         <button id="increment-button" onclick="increment()">INCREMENT</button>
         <script src="index.js"></script>
