save button added to passenger counter

--- a/Passenger counter app/index.html
+++ b/Passenger counter app/index.html
@@ -6,6 +6,10 @@
         <h1>People entered:</h1>
         <h2 id="count">0</h2>
         <button id="increment-button" onclick="increment()">INCREMENT</button>
+        <br>
+        <button id="save-button" onclick="save()">SAVE</button>
+        <br>
+        <p id="entries">Previous entries: </p>
         <script src="index.js"></script>
     </body>
 </html>
