--- a/Passenger counter app/index.html
+++ b/Passenger counter app/index.html
@@ -9,7 +9,8 @@
         <br>
         <button id="save-button" onclick="save()">SAVE</button>
         <br>
-        <p id="entries">Previous entries: </p>
+        <p id="savecount">Saved Count: </p>
+        <p id="noofsaves">No. of saves: </p>
         <script src="index.js"></script>
     </body>
 </html>
