--- a/Blackjack/index.html
+++ b/Blackjack/index.html
@@ -9,7 +9,7 @@
         <p id="sumheading">Sum:</p>
         <button onclick="startGame()">START GAME</button>
         <button onclick="newCard()">NEW CARD</button>
-        <p id="player-el"></p>
+        <p id="player"></p>
         <script src="index.js"></script>
     </body>
 </html>
