--- a/Blackjack/index.html
+++ b/Blackjack/index.html
@@ -14,6 +14,7 @@
         </div>
         <div class="button-container">
             <button id="newCardButton" onclick="newCard()">NEW CARD</button>
+            <button id="foldButton" onclick="fold()">FOLD</button>
         </div>
 
 
