dealer reveal features

--- a/Blackjack/index.html
+++ b/Blackjack/index.html
@@ -22,7 +22,12 @@
         <!-- <button onclick="disable(this)">START GAME</button>
         <button onclick="newCard()">RESET</button>
         <button id="newcardid" onclick="newCard()">NEW CARD</button> -->
-        <p id="player"></p>
+        <!-- <p id="player"></p> -->
+
+        <p id="dealerscardsheading">Dealer's Cards:</p>
+        <p id="dealerssumheading">Dealer's sum:</p>
+        <p id="resultheading">Winner:</p>
+
         <script src="index.js"></script>
     </body>
 </html>
