--- a/ChromeExt/index.html
+++ b/ChromeExt/index.html
@@ -7,7 +7,7 @@
         <button id="inputButton">SAVE INPUT</button>
         <button id="tabButton">SAVE TAB</button>
         <button id="deleteButton">DELETE ALL</button>
-        <ul id="bookmarkList">
+        <ul id="ulEl">
         </ul>
         <script src="index.js"></script>
     </body>
