--- a/Blackjack/index.html
+++ b/Blackjack/index.html
@@ -28,6 +28,6 @@
         <p id="dealerssumheading">Dealer's sum:</p>
         <p id="resultheading">Winner:</p>
 
-        <script src="index.js"></script>
+        <script src="test2.js"></script>
     </body>
 </html>
