--- a/chess profile view/index.html
+++ b/chess profile view/index.html
@@ -7,6 +7,11 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
+
+    <div class="chesslogocontainer">
+        <img src="assets/logo.png" class="logoclass">
+    </div>
+
     <div class="container">
     <div class = "search">
         <div class="searchbox">
